1. update start shell script 2. fix conn last issue